# fast-trade

./: .coveragerc  .flake8  .gitignore  .pypirc  2017_all.json  2019_popular.json  CONTRIBUTING.md  FINTA_README.md  LICENSE  LSTM.ipynb  MANIFEST.INI  README.md  REAME.md  SimpleMa.strat.json  TRANSFORMER_README.md  Untitled.ipynb  build_summary_helper.ipynb  cli_help.txt  config.json  dev_requirements.txt  example.strat.json  example_backtest.json  example_strat.json  example_strat_2.json  ft_example.py  ft_loop.py  generate_backtest.py  generate_strategy.py  lol-ma.strat.json  pyproject.toml  requirements.txt  run.py  run_example.py  running-scared.strat.json  setup.py  sma_strategy.json  strategy.json  ubuntu_install.sh  wtf.json
fast_trade/: .env-example  __init__.py  __main__.py  analyze.py  build_data_frame.py  build_summary.py  calculate_perc_missing.py  cb_api.py  check_missing_dates.py  cli.py  cli_help.json  cli_helpers.py  custom_functions.py  db_helpers.py  evaluate.py  file_helpers.py  find_purchased_value.py  finta.py  generate_strategy.py  indicator_map.py  indicators.py  log_utils.py  main.py  run.py  run_analysis.py  run_backtest.py  run_cleanup.py  run_many_pairs.py  run_single_backtest.py  run_single_pair.py  run_strategy_with_dataframe.py  store.py  test_analyze.py  test_build_data_frame.py  transformers_map.py  update_archive.py  update_symbol_data.py  utils.py  validate_backtest.py
test/: __init__.py  empty.csv.txt  extra_data.txt  ohlcv_data.csv.txt  test_build_data_frame.py  test_build_summary.py  test_calculate_perc_missing.py  test_check_missing_dates.py  test_run_analysis.py  (+3 more)
(+33 files in other folders)
